50 upgrade plugin for Graylog 6 (#51)